btn-dropdown: add theme & size attributes + switch to '@' transclusion

--- a/templates/dropdowns/button-dropdown.html
+++ b/templates/dropdowns/button-dropdown.html
@@ -1,5 +1,5 @@
 <div class="dropdown">
-  <button class="btn btn-{{theme}} dropdown-toggle" type="button" id="{{asId}}" data-toggle="dropdown">
+  <button class="btn btn-{{theme}} btn-{{size}} dropdown-toggle" type="button" id="{{asId}}" data-toggle="dropdown">
     Dropdown
     <span class="caret"></span>
   </button>
