btnDropdown: add 'title' attribute to define the button's text

--- a/templates/dropdowns/button-dropdown.html
+++ b/templates/dropdowns/button-dropdown.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <button class="btn btn-{{theme}} btn-{{size}} dropdown-toggle" type="button" id="{{asId}}" data-toggle="dropdown">
-    Dropdown
+    {{title}}
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu" aria-labelledby="{{asId}}" data-ng-transclude></ul>
