dropdowns: add 'dropup' boolean attribute to flip the dropdown and make it drop up

--- a/templates/dropdowns/dropdown.html
+++ b/templates/dropdowns/dropdown.html
@@ -1,4 +1,4 @@
-<div class="dropdown">
+<div class="{{directionClass}}">
   <button class="btn dropdown-toggle sr-only" type="button" id="{{asId}}" data-toggle="dropdown">
     Dropdown
     <span class="caret"></span>
