--- a/templates/dropdowns/split-dropdown.html
+++ b/templates/dropdowns/split-dropdown.html
@@ -1,4 +1,4 @@
-<div class="btn-group">
+<div class="btn-group {{directionClass}}">
     <button type="button" class="btn btn-{{theme}}">
         <glyph icon="{{icon}}"></glyph> {{title}}
     </button>
