--- a/templates/dropdowns/btn-dropdown.html
+++ b/templates/dropdowns/btn-dropdown.html
@@ -1,4 +1,4 @@
-<div class="dropdown">
+<div class="{{directionClass}}">
   <button class="btn btn-{{theme}} btn-{{size}} dropdown-toggle" type="button" id="{{asId}}" data-toggle="dropdown">
     {{title}}
     <span class="caret"></span>
