add navbar directives & update README + docs

--- a/templates/dropdowns/dropdown.html
+++ b/templates/dropdowns/dropdown.html
@@ -1,5 +1,5 @@
-<div class="{{btnGroup}} {{directionClass}}">
-    <button type="button" class="btn btn-{{theme}} {{srOnly}}" data-toggle="{{isSplit && '' || 'dropdown' }}" ng-click="if()">
+<div class="{{btnGroup}} {{directionClass}}" id="">
+    <button type="button" class="btn btn-{{theme}} {{srOnly}}" data-toggle="{{isSplit && '' || 'dropdown' }}">
         <glyph icon="{{icon}}"></glyph> {{title}}
         <span class="caret" data-ng-hide="isSplit"></span>
     </button>
