inputGroup: add support for a 'size' attribute

--- a/templates/inputs/input-group.html
+++ b/templates/inputs/input-group.html
@@ -1,4 +1,4 @@
-<div id="{{asId}}" class="input-group {{asClass}}">
+<div id="{{asId}}" class="input-group {{sizeWildcard}}{{size}} {{asClass}}">
     <!-- Left Span Add-on -->
     <span class="input-group-addon" data-ng-show="type == 'span' && side == 'left'">{{title}}</span>
     <!-- Left Button Add-on -->
